[project]
name = "renard-pipeline"
version = "0.6.5"
description = "Relationships Extraction from NARrative Documents"
authors = [
    {name = "Arthur Amalvy", email = "arthur.amalvy@univ-avignon.fr"},
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=2.0.0,!=2.0.1",
    "transformers>=4.37",
    "nltk>=3.9",
    "tqdm>=4.62",
    "networkx>=3.0",
    "more-itertools>=10.5",
    "nameparser>=1.1",
    "matplotlib>=3.5",
    "pandas>=2.0",
    "pytest>=8.3.0",
    "tibert>=0.5",
    "grimbert>=0.1",
    "datasets>=3.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/CompNet/Renard"
Documentation = "https://compnet.github.io/Renard/"
Repository = "https://github.com/CompNet/Renard"

[dependency-groups]
dev = [
    "hypothesis>=6.82",
    "Sphinx>=4.3",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]