[project]
name = "renard-pipeline"
version = "0.6.5"
description = "Relationships Extraction from NARrative Documents"
authors = [
    {name = "Arthur Amalvy", email = "arthur.amalvy@univ-avignon.fr"},
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=2.7.0",
    "transformers>=4.53.2",
    "nltk>=3.9.1",
    "tqdm>=4.67.1",
    "networkx>=3.2",
    "more-itertools>=10.7",
    "nameparser>=1.1.3",
    "matplotlib>=3.9",
    "pytest>=8.4.1",
    "tibert>=0.5.2",
    "grimbert>=0.1.4",
    "datasets>=4.0.0",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["renard"]

[project.urls]
Homepage = "https://github.com/CompNet/Renard"
Documentation = "https://compnet.github.io/Renard/"
Repository = "https://github.com/CompNet/Renard"

[dependency-groups]
dev = [
    "hypothesis>=6.82",
    "Sphinx>=4.3",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
ui = [
    "gradio>=4.44.1",
]
